AM_CPPFLAGS = -Isrc -I$(top_srcdir)/src
LDADD =

EXTRA_DIST =
CLEANFILES =
DISTCLEANFILES =
MAINTAINERCLEANFILES = aclocal.m4 configure config.h.in~ config.h.in Makefile.in $(DIST_ARCHIVES)
noinst_LIBRARIES =

include $(top_srcdir)/libmd/local.mk
include $(top_srcdir)/src/local.mk
include $(top_srcdir)/tests/local.mk
include $(top_srcdir)/man/local.mk
