MAINTAINERCLEANFILES = Makefile.in
AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/libmd
LDADD = $(top_builddir)/src/libhtcore.a $(top_builddir)/libmd/libmd.a

noinst_PROGRAMS = libmd-sha1 libmd-md5 libhtcore-salts libhtcore-basic-apr1 libhtcore-basic-sha1 libhtcore-basic-crypt libhtcore-digest-md5
